force-app/main/default/objects/Campus_Contact__c/Campus_Contact__c.object-meta.xml
<CustomObject>
    <label>Campus Contact</label>
    <nameField>
        <label>Campus Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campus Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>