force-app/main/default/objects/Campus_Contact__c/fields/Helpful__c.field-meta.xml
<CustomField>
    <fullName>Helpful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Helpful</label>
    <type>Checkbox</type>
</CustomField>