force-app/main/default/objects/Campus_Contact__c/fields/Mailing_Street_cont__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_cont__c</fullName>
    <label>Mailing Street (cont.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>