force-app/main/default/objects/Campus_Contact__c/fields/Mailing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip__c</fullName>
    <label>Mailing Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>