force-app/main/default/objects/Campus_Contact__c/fields/NACA_Contact__c.field-meta.xml
<CustomField>
    <fullName>NACA_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NACA Contact</label>
    <type>Checkbox</type>
</CustomField>