force-app/main/default/objects/Campus_Contact__c/fields/Other_State__c.field-meta.xml
<CustomField>
    <fullName>Other_State__c</fullName>
    <label>Other State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>