force-app/main/default/objects/Campus_Contact__c/fields/Other_Street__c.field-meta.xml
<CustomField>
    <fullName>Other_Street__c</fullName>
    <label>Other Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>