force-app/main/default/objects/Campus_Contact__c/fields/Other_Street_cont__c.field-meta.xml
<CustomField>
    <fullName>Other_Street_cont__c</fullName>
    <label>Other Street (cont.)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>