force-app/main/default/objects/Campus_Contact__c/fields/Other_Zip__c.field-meta.xml
<CustomField>
    <fullName>Other_Zip__c</fullName>
    <label>Other Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>