force-app/main/default/objects/Campus_Contact__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reports To</label>
    <referenceTo>Campus_Contact__c</referenceTo>
    <relationshipLabel>Direct Reports</relationshipLabel>
    <relationshipName>Campus_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>