force-app/main/default/objects/Campus_Contact__c/fields/Responsibilites__c.field-meta.xml
<CustomField>
    <fullName>Responsibilites__c</fullName>
    <description>List any events, programs, specific areas the contact is over.</description>
    <inlineHelpText>Ex: Greek Week, Homecoming, Welcome Week, etc.</inlineHelpText>
    <label>Responsibilites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>