force-app/main/default/objects/Campus_Contact__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>School</label>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>Campus Contacts</relationshipLabel>
    <relationshipName>Campus_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>