force-app/main/default/objects/Campus_Contact__c/fields/University_Relations_Ranking__c.field-meta.xml
<CustomField>
    <fullName>University_Relations_Ranking__c</fullName>
    <description>1 – Initial contact
2 – A few interactions
3 – Responsive, solid contact
4 – Supportive, good interactions
5 – BFF! Contact is our ally, works with us and guides us on any request</description>
    <label>University Relations Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>